# openstef

./: .gitignore  README.md  REUSE.toml  SECURITY.md  poe_tasks.toml  pyproject.toml  requirements.txt  ruff.toml  setup.py  sonar-project.properties  test-requirements.txt  upstream_commit_hash
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  openstef-project-story.md  task.md
.github/workflows/: _job_quality_check.yaml  black-format-code.yml  check.yaml  citations.yaml  codeql.yaml  docs-check.yaml  docs-publish.yaml  docs.yaml  pr-labeler.yaml  python-build.yaml  python-upload-package.yaml  release-v4.yaml  release.yaml  reuse-compliance.yaml
docs/: doc-requirements.txt  pyproject.toml  sync_sources.py
docs/source/: conf.py  index.rst
docs/source/contribute/: development_workflow.rst
docs/source/project/: governance.rst  index.rst
examples/: README.md  pyproject.toml
examples/benchmarks/liander2024/: run_chronos2_benchmark.ipynb
examples/deployment/: README.md  poe_tasks.toml  pyproject.toml
examples/deployment/src/airflow_app/dags/: openstef_forecast.py  openstef_train.py
examples/tutorials/: foundation_model_forecasting.ipynb  quantile_calibration.ipynb
